--- a/vue相关/vue-resource/src/styles/_color.scss
+++ b/vue相关/vue-resource/src/styles/_color.scss
@@ -1,7 +1,10 @@
 $blue: #409eff;
 $red: #f56c6c;
 $yellow: #e6a23c;
+$warning: #e6a23c;
 $green: #67c23a;
+$success: #67c23a;
 $grey: #909399;
 $main_text: #303133;
 $main_border: #dcdfe6;
+$bg: #f0f0f0;
